Add allauth auth endpoints and Google setup

--- a/src/backend/.env.example
+++ b/src/backend/.env.example
@@ -9,3 +9,7 @@ DATABASE_URL=sqlite:///db.sqlite3
 # Email / Anymail
 EMAIL_BACKEND=django.core.mail.backends.console.EmailBackend
 RESEND_API_KEY=
+
+# OAuth
+GOOGLE_CLIENT_ID=
+GOOGLE_CLIENT_SECRET=
