--- a/src/backend/pyproject.toml
+++ b/src/backend/pyproject.toml
@@ -11,6 +11,8 @@ dependencies = [
     "django-allauth>=65.0",
     "django-environ>=0.11",
     "django-anymail[resend]>=12.0",
+    "PyJWT>=2.9",
+    "cryptography>=43.0.1",
 ]
 
 [project.optional-dependencies]
